fixed work elements alignment

--- a/style.css
+++ b/style.css
@@ -527,7 +527,8 @@ div:hover p {
   position: relative;
   text-align: right;
   margin: 0;
-  top: -5rem;
+  top: 7rem;
+  left: 3rem;
   color: #f46c4e;
   background-color: #cfd2ff;
   padding: 0 20px 20px;
